// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivateComponent should display the app name if token is valid 1`] = `
<fcl-activate
  appName={[Function String]}
  tokenValid={[Function Boolean]}
>
  <div
    class="fcl-mat-card-content fcl-activation-succeeded-content"
  >
    <div
      class="fcl-activate-text"
    >
      <p
        class="mat-subheading-1"
      >
         Your test account is now active and you are able to log in. 
      </p>
      <p
        class="mat-subheading-1"
      >
         For guidance on using the software, please refer to our 
        <a
          href="/assets/quick_guide.pdf"
          target="_blank"
        >
          Quick Guide
        </a>
         to get started easily. 
      </p>
    </div>
    <div
      class="fcl-card-action fcl-card-action-container"
    >
      <div
        class="form-group fcl-login-button"
      >
        <button
          class="mat-focus-indicator mat-raised-button mat-button-base mat-primary"
          color="primary"
          mat-raised-button=""
          tabindex="0"
          type="submit"
        >
          <span
            class="mat-button-wrapper"
          >
             Go to Login 
          </span>
          <span
            class="mat-ripple mat-button-ripple"
            matripple=""
          />
          <span
            class="mat-button-focus-overlay"
          />
        </button>
      </div>
    </div>
  </div>
</fcl-activate>
`;

exports[`ActivateComponent should not display the app name if token is invalid 1`] = `
<fcl-activate
  appName={[Function String]}
  tokenValid="false"
>
  <div
    class="fcl-mat-card-content fcl-activation-failed-content"
  >
    <div
      class="fcl-activate-text"
    >
      <p
        class="mat-subheading-1"
      >
        Your account activation failed.
      </p>
      <p
        class="mat-subheading-1"
      >
         Please login. In the case of a failure you will receive further instructions. 
      </p>
    </div>
    <div
      class="fcl-card-action fcl-card-action-container"
    >
      <div
        class="form-group fcl-login-button"
      >
        <button
          class="mat-focus-indicator mat-raised-button mat-button-base mat-primary"
          color="primary"
          mat-raised-button=""
          tabindex="0"
          type="submit"
        >
          <span
            class="mat-button-wrapper"
          >
             Continue to login 
          </span>
          <span
            class="mat-ripple mat-button-ripple"
            matripple=""
          />
          <span
            class="mat-button-focus-overlay"
          />
        </button>
      </div>
    </div>
  </div>
</fcl-activate>
`;

exports[`ActivateComponent should render the component correctly 1`] = `
<fcl-activate>
</fcl-activate>
`;
